feat(server): support for sorting, searching, and filtering
